force-app/main/default/objects/Calendar__c/Calendar__c.object-meta.xml
<CustomObject>
    <description>A custom object Calendar is created to track the appointments.</description>
    <label>Calendar</label>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>