force-app/main/default/objects/Calendar__c/fields/Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Appointment_ID__c</fullName>
    <displayFormat>APT-{0000}</displayFormat>
    <label>Appointment ID</label>
    <type>AutoNumber</type>
</CustomField>