force-app/main/default/objects/Calendar__c/fields/Dentist_Name__c.field-meta.xml
<CustomField>
    <fullName>Dentist_Name__c</fullName>
    <label>Dentist Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>